# alchemlyb

./: .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .travis.yml  AUTHORS  CHANGES  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  gmx_io.py  gromacs.py  mbar.py  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  testing.md  versioneer.py
.github/workflows/: ci.yaml  deploy.yaml  draft-pdf.yml
alchemlyb/: gmx_io.py  mbar.py
devtools/conda-envs/: test_env.yaml  test_env.yml
docs/: Makefile  alchemlyb.estimators.TI_GQ.rst  api_principles.rst  api_proposal.rst  conf.py  convergence.rst  estimators-fep.rst  estimators-ti.rst  estimators.rst  examples.rst  index.rst  install.rst  make.bat  miscellaneous.rst  overview.rst  parsing-gmx.rst  parsing.rst  postprocessing.rst  preprocessing.rst  references.rst  requirements.yaml  subsampling.rst  tutorial.rst  tutorials.rst  visualisation.rst  workflow.rst  workflows.rst
docs/.templates/: footer.html
docs/convergence/: alchemlyb.convergence.convergence.rst
docs/estimators/: alchemlyb.estimators.BAR.rst  alchemlyb.estimators.MBAR.rst  alchemlyb.estimators.TI.rst  alchemlyb.estimators.TI_GQ.rst
docs/miscellaneous/: logging.rst
docs/parsing/: alchemlyb.parsing.amber.rst  alchemlyb.parsing.gmx.rst  alchemlyb.parsing.gomc.rst  alchemlyb.parsing.lammps.rst  alchemlyb.parsing.namd.rst  alchemlyb.parsing.parquet.rst  alchemlyb.parsing.util.rst
docs/postprocessors/: alchemlyb.postprocessors.units.rst
docs/preprocessing/: alchemlyb.preprocessing.subsampling.rst
docs/tutorials/: Pandas-Fu.ipynb
docs/visualisation/: alchemlyb.visualisation.plot_block_average.rst  alchemlyb.visualisation.plot_convergence.rst  alchemlyb.visualisation.plot_dF_state.rst  alchemlyb.visualisation.plot_mbar_omatrix.rst  alchemlyb.visualisation.plot_mbar_overlap_matrix.rst  alchemlyb.visualisation.plot_moving_average.rst  alchemlyb.visualisation.plot_ti_dhdl.rst
docs/workflows/: alchemlyb.workflows.ABFE.rst  alchemlyb.workflows.abfe.rst  alchemlyb.workflows.base.rst
joss_paper/: paper.bib  paper.md
src/alchemlyb/: __init__.py  _version.py  constants.py
src/alchemlyb/analysis/: mbar.py
src/alchemlyb/convergence/: __init__.py  convergence.py
src/alchemlyb/estimators/: __init__.py  bar_.py  base.py  mbar.py  mbar_.py  ti_.py  ti_cubic_.py  ti_gaussian_quadrature.py  ti_gaussian_quadrature_.py
src/alchemlyb/parsing/: __init__.py  amber.py  gmx.py  gomc.py  lammps.py  namd.py  parquet.py  util.py  xvg.py
src/alchemlyb/postprocessors/: __init__.py  convergence.py  dF_state.py  units.py
src/alchemlyb/preprocessing/: __init__.py  bootstrapping.py  slicing.py  statinef.py  subsampling.py
src/alchemlyb/tests/: __init__.py  conftest.py  pytest.ini  test_convergence.py  test_estimators.py  test_fep_estimators.py  test_import.py  test_placeholder.py  test_preprocessing.py  test_ti_estimators.py  test_ti_estimators_amber.py  test_ti_gaussian_quadrature.py  test_units.py  test_version.py  test_visualisation.py  test_workflow.py  test_workflow_ABFE.py
src/alchemlyb/tests/parsing/: test_add_attr.py  test_amber.py  test_gmx.py  test_gomc.py  test_lammps.py  test_namd.py  test_parquet.py  test_util.py
src/alchemlyb/visualisation/: __init__.py  convergence.py  dF_state.py  mbar_martix.py  mbar_matrix.py  ti_dhdl.py
src/alchemlyb/workflows/: __init__.py  abfe.py  base.py
